--- a/edu.html
+++ b/edu.html
@@ -70,7 +70,7 @@
             </tr>
         </tbody>
     </table>
-    <a class="back-button" href="cv.html">Back</a>
+    <a class="back-button" href="index.html">Back</a>
     
 </body>
 </html>
